client: Add directive 'bkvn-subject'
Via 'yo angular-fullstack:directive bkvn-subject'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -51,6 +51,7 @@
           <!-- injector:js -->
           <script src="app/bkvn-footer/bkvn-footer.directive.js"></script>
           <script src="app/bkvn-header/bkvn-header.directive.js"></script>
+          <script src="app/bkvn-subject/bkvn-subject.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <!-- endinjector -->
