--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
 
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/bkvn-book/bkvn-book.directive.js"></script>
           <script src="app/bkvn-footer/bkvn-footer.directive.js"></script>
           <script src="app/bkvn-header/bkvn-header.directive.js"></script>
           <script src="app/bkvn-subject/bkvn-subject.directive.js"></script>
