client: Add directive 'bkvn-image'
Represents an image in the UI.

Via 'yo angular-fullstack:directive bkvn-image'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -53,6 +53,7 @@
           <script src="app/bkvn-chapter/bkvn-chapter.directive.js"></script>
           <script src="app/bkvn-footer/bkvn-footer.directive.js"></script>
           <script src="app/bkvn-header/bkvn-header.directive.js"></script>
+          <script src="app/bkvn-image/bkvn-image.directive.js"></script>
           <script src="app/bkvn-page/bkvn-page.directive.js"></script>
           <script src="app/bkvn-subject/bkvn-subject.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
