client: Add directive 'bkvn-video'
Represents a video in the UI.

Via 'yo angular-fullstack:directive bkvn-video'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
           <script src="app/bkvn-image/bkvn-image.directive.js"></script>
           <script src="app/bkvn-page/bkvn-page.directive.js"></script>
           <script src="app/bkvn-subject/bkvn-subject.directive.js"></script>
+          <script src="app/bkvn-video/bkvn-video.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <!-- endinjector -->
