client: Add service 'SubjectSvc'
Via 'yo angular-fullstack:service SubjectSvc'

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
           <script src="app/bkvn-video/bkvn-video.directive.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/SubjectSvc/SubjectSvc.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
