client: Add service 'ChapterSvc'
Via 'yo angular-fullstack:service ChapterSvc'

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
           <script src="app/bkvn-subject/bkvn-subject.directive.js"></script>
           <script src="app/bkvn-video/bkvn-video.directive.js"></script>
           <script src="app/BookSvc/BookSvc.service.js"></script>
+          <script src="app/ChapterSvc/ChapterSvc.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/SubjectSvc/SubjectSvc.service.js"></script>
