--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,7 @@
           <script src="app/ChapterSvc/ChapterSvc.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/PageSvc/PageSvc.service.js"></script>
           <script src="app/SubjectSvc/SubjectSvc.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
