--- a/client/index.html
+++ b/client/index.html
@@ -62,6 +62,8 @@
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/PageSvc/PageSvc.service.js"></script>
+          <script src="app/subject/subject.controller.js"></script>
+          <script src="app/subject/subject.js"></script>
           <script src="app/SubjectSvc/SubjectSvc.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
