--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,8 @@
           <script src="app/bkvn-page/bkvn-page.directive.js"></script>
           <script src="app/bkvn-subject/bkvn-subject.directive.js"></script>
           <script src="app/bkvn-video/bkvn-video.directive.js"></script>
+          <script src="app/book/book.controller.js"></script>
+          <script src="app/book/book.js"></script>
           <script src="app/BookSvc/BookSvc.service.js"></script>
           <script src="app/ChapterSvc/ChapterSvc.service.js"></script>
           <script src="app/main/main.controller.js"></script>
