client: Add route 'chapter'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,8 @@
           <script src="app/book/book.controller.js"></script>
           <script src="app/book/book.js"></script>
           <script src="app/BookSvc/BookSvc.service.js"></script>
+          <script src="app/chapter/chapter.controller.js"></script>
+          <script src="app/chapter/chapter.js"></script>
           <script src="app/ChapterSvc/ChapterSvc.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
