client: Add route 'page'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,8 @@
           <script src="app/ChapterSvc/ChapterSvc.service.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/page/page.controller.js"></script>
+          <script src="app/page/page.js"></script>
           <script src="app/PageSvc/PageSvc.service.js"></script>
           <script src="app/subject/subject.controller.js"></script>
           <script src="app/subject/subject.js"></script>
