client: Add route 'image'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,8 @@
           <script src="app/chapter/chapter.controller.js"></script>
           <script src="app/chapter/chapter.js"></script>
           <script src="app/ChapterSvc/ChapterSvc.service.js"></script>
+          <script src="app/image/image.controller.js"></script>
+          <script src="app/image/image.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/page/page.controller.js"></script>
