client: Add route 'video'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -73,6 +73,8 @@
           <script src="app/subject/subject.controller.js"></script>
           <script src="app/subject/subject.js"></script>
           <script src="app/SubjectSvc/SubjectSvc.service.js"></script>
+          <script src="app/video/video.controller.js"></script>
+          <script src="app/video/video.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
 </body>
