client: Add controller 'AppHeader'
Via 'yo angular-fullstack:controller AppHeader'

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -49,6 +49,7 @@
 
         <script src="app/app.js"></script>
           <!-- injector:js -->
+          <script src="app/AppHeader/AppHeader.controller.js"></script>
           <script src="app/bkvn-book/bkvn-book.directive.js"></script>
           <script src="app/bkvn-chapter/bkvn-chapter.directive.js"></script>
           <script src="app/bkvn-footer/bkvn-footer.directive.js"></script>
