client: Add directive 'bkvn-status'
Via 'yo angular-fullstack:directive bkvn-status'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
           <script src="app/bkvn-header/bkvn-header.directive.js"></script>
           <script src="app/bkvn-image/bkvn-image.directive.js"></script>
           <script src="app/bkvn-page/bkvn-page.directive.js"></script>
+          <script src="app/bkvn-status/bkvn-status.directive.js"></script>
           <script src="app/bkvn-subject/bkvn-subject.directive.js"></script>
           <script src="app/bkvn-video/bkvn-video.directive.js"></script>
           <script src="app/book/book.controller.js"></script>
