client: /main: Implement basic layout
Mimics a 'welcome' page.

Wait for 5 seconds for user to click the start button.
On timeout, transition to next state.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,1 +1,6 @@
-
+<div class="bkvn-logo">
+  <span class='bkvn-logo-1'>Book</span><span class='bkvn-logo-2'>Vn</span>
+</div>
+<div class="bkvn-start">
+  <span ng-click="onStart()">Start</span>
+</div>
