client: /subject: Initial implementation
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/subject/subject.html
+++ b/client/app/subject/subject.html
@@ -1,3 +1,8 @@
-<div class="col-md-12">
-This is the subject view.
+<bkvn-status></bkvn-status>
+<h2>Select a subject</h2>
+<div ng-if="Subjects.length === 0">
+  <h3>No subject configured.</h3>
+</div>
+<div class="bkvn-items" ng-if="Subjects.length > 0">
+  <bkvn-subject ng-repeat="subject in Subjects" subject="subject"></bkvn-subject>
 </div>
