client: bkvn-footer: Initial implementation
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/bkvn-footer/bkvn-footer.html
+++ b/client/app/bkvn-footer/bkvn-footer.html
@@ -1,1 +1,2 @@
-<div>this is the bkvnFooter directive</div>
+<span class="bkvn-author">&copy; 2017. {{author}}.</span>
+<span class="bkvn-donee">Specially created for {{donee}}.</span>
