client: bkvn-header: Initial implementation
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/bkvn-header/bkvn-header.html
+++ b/client/app/bkvn-header/bkvn-header.html
@@ -1,1 +1,3 @@
-<div>this is the bkvnHeader directive</div>
+<div class="bkvn-logo-sm">
+  <span class='bkvn-logo-sm-1'>Book</span><span class='bkvn-logo-sm-2'>Vn</span>
+</div>
