client: /image: Show links to next & previous images
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/image/image.html
+++ b/client/app/image/image.html
@@ -1,1 +1,4 @@
+<bkvn-status></bkvn-status>
 <bkvn-image num="self"></bkvn-image>
+<a ng-if="argPrev !== null" class="bkvn-prev-image" ui-sref="image(argPrev)">&lt;</a>
+<a ng-if="argNext !== null" class="bkvn-next-image" ui-sref="image(argNext)">&gt;</a>
